[package]
name = "ratatui-macros"
version = "0.2.2"
edition = "2021"
authors = ["Dheepak Krishnamurthy"]
description = "Macros for Ratatui"
license = "MIT" # or any other appropriate license
repository = "https://github.com/kdheepak/ratatui-macros"
documentation = "https://docs.rs/ratatui-macros"
keywords = ["macros", "tui", "ui", "layout", "ratatui"]
categories = ["tui", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["ratatui-macros-derive"]

[dependencies]
ratatui = "0.25.0"
ratatui-macros-derive = { version = "0.1.1", path = "ratatui-macros-derive" }

[dev-dependencies]
trybuild = { version = "1.0.88", features = ["diff"] }

[[bin]]
name = "ratatui-macros"
path = "main.rs"
